<resources>

    <string name="app_name">Final Project Mobile Programming</string>
    <string name="search">SEARCH</string>
    <string name="saveItems">Saved Items</string>
    <string name="app1_name">Sun App</string>
    <string name="app2_name">Food Recipe</string>
    <string name="app3_name">Dictionary</string>
    <string name="app4_name">Deezer Song</string>
    <string name="introduce_message">WELCOME! \n Please choose your point of action</string>
    <string name="error_msg">Error fetching definitions</string>
    <string name="enter_artist_name">Enter Artist Name</string>
    <string name="search_hint">Search Hint</string>
    <string name="search_button">Search Button</string>
    <string name="spoonacular_api_key">Spoonacular_api_key</string>
    <string name="save">Save</string>


    <string name="app_name" translatable="false">Final Project Mobile Programming</string>

    <string name="enter_latitude_longitude">Please enter latitude and longitude</string>
    <string name="refresh">Refresh</string>
    <string name="error" translatable="false">Unexpected Error</string>
    <string name="delete">Delete One Favorite city</string>
    <string name="enter_latitude">Enter latitude</string>
    <string name="enter_longitude">Enter longitude</string>
    <string name="lookup">Lookup</string>
    <string name="default_result_text">Lookup result will display here</string>
    <string name="location_name_hint">Please input the location name</string>
    <string name="location_not_null">Location name cannot be null</string>
    <string name="location_saved">Location Saved</string>
    <string name="save_location">Save Location</string>
    <string name="MainActivity_Instruction">
        1. Please input latitude and longitude.\n
        2. Input location name to mark if necessary.\n
        3. Click \"Lookup\" to retrieve sunset/sunrise time.\n
        4. If need save this location, click \"Save\" to store.</string>
    <string name="main_instruction">Main Instruction</string>

    <string name="FavoriteActivity_Instruction">
        1. Delete all locations by clicking delete TOP icon.\n
        2. Delete specific location by clicking delete SIDE icon.\n
        3. Click specific location to back to MainActivity if need update.\n
        4. Search location by typing specific location name</string>
    <string name="location_instruction">Saved Locations Instruction</string>
    <string name="showFavorites">Show Favorites</string>
    <string name="all_delete">Delete All Favorite city</string>
    <string name="search_locations">Search Saved locations by locationName</string>
    <string name="content_clear">Contents cleared.</string>

    <string name="latitude">latitude</string>
    <string name="longitude">longitude</string>
    <string name="name">name</string>
    <string name="clear_locations">Clear LOCATIONS</string>
    <string name="sure_to_delete_all">Are you sure to delete ALL saved locations？</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="url_part1">https://api.sunrisesunset.io/json?lat=</string>
    <string name="url_part3"><![CDATA[&timezone=UTC&date=today]]></string>
    <string name="url_part2"><![CDATA[&lng=]]></string>
    <string name="status">status</string>
    <string name="results">results</string>
    <string name="sunrise">sunrise</string>
    <string name="sunset">sunset</string>
    <string name="result_format">Location Name: %s\nLatitude: %s\nLongitude: %s\nSunrise: %s\nSunset: %s</string>
    <string name="OK" translatable="false">OK</string>
    <string name="retrieve_data_fail">Retrieve Data Fail.</string>
    <string name="phase_data_error">Phase Data Error.</string>
    <string name="request_fail">Request Fail</string>

    <string name="time_format">h:mm:ss a</string>
    <string name="pref_key_latitude">latitude</string>
    <string name="pref_key_longitude">longitude</string>
    <string name="pref_key_location_name">locationName</string>
    <string name="location_name">locationName</string>





    <string name="title_bar_dz">Deezer Song\'s Joel</string>
    <string name="search_hint_dz">Search</string>
    <string name="recent_searches_dz">Recent Searches</string>
    <string name="no_results__dz">No results found</string>
    <string name="artist">Artist</string>
    <string name="close_dz">Close</string>
    <string name="album">Album</string>
    <string name="duration_format">%02d:%02d</string>
    <string name="song_title">Song Title</string>
    <string name="no_artist_found">No artist found</string>
    <string name="error_dz">Error</string>
    <string name="song_list">\u0020Song List</string>
    <string name="artist_list_toolbar">Artist List</string>
    <string name="error_fetching_top_tracks">Error fetching top tracks: %1$s</string>
    <string name="search_terms_key">searchTerms</string>
    <string name="favorite_songs">Favorite Songs</string>
    <string name="added_to_favorites">%1$s Added to favorites</string>
    <string name="failed_to_add_song_to_favorites">Failed to add song to favorites</string>
    <string name="confirm_deletion_dz">Confirm Deletion</string>
    <string name="confirm_deletion_message_dz">Are you sure you want to delete this song?</string>
    <string name="delete_dz">Delete</string>
    <string name="cancel_dz">Cancel</string>
    <string name="deleted_from_favorites">%1$s Deleted from favorites</string>
    <string name="deezer_api_url">https://api.deezer.com/artist/%1$d/top?limit=50</string>
    <string name="help_dialog_title">Instructions</string>
    <string name="removed_from_favorites">%1$s Removed from favorites</string>

    <string-array name="help_instructions_main">
        <item>- Click on the start to go to your favorite songs.</item>
        <item>- Type in the address bar to search for your favorite artist.</item>
        <item>- Clicking on a recent search item will automatically direct you to that artist.</item>
        <item>- If you want to delete a recent search, click on the trash icon in front of the artist.</item>
        <item>- Tap the home icon to return to common app page.</item>

    </string-array>
    <string-array name="help_instructions_artist">
        <item>- Tap the start icon to access your favorite songs.</item>
        <item>- Tap the arrow next to each artist to see their most popular songs.</item>
        <item>- Tap the arrow in the toolbar to return to the previous screen.</item>
        <item>- Tap the home icon to return to home page.</item>
    </string-array>
    <string-array name="help_instructions_song">
        <item>- Tap the start icon in the toolbar to access your favorite songs.</item>
        <item>- Tap the arrow in the toolbar to return to the previous screen.</item>
        <item>- Tap the start icon to add the song to your favorites.</item>
        <item>- Tap the x icon to remove the song from your favorites.</item>
        <item>- Tap the home icon to return to home page.</item>
    </string-array>
    <string-array name="help_instructions_favorites">
        <item>- Tap the arrow in the toolbar to return to the previous screen.</item>
        <item>- Tap the x icon to remove the song from your favorites.</item>
    </string-array>

</resources>