<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/black">

    <!-- Album cover image -->
    <ImageView
        android:id="@+id/albumCoverImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:scaleType="fitCenter"
        android:layout_marginBottom="16dp"/>

    <!-- Title and Duration -->
    <LinearLayout
        android:id="@+id/titleDurationLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/albumCoverImageView"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleSongTextView"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/song_title"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/durationTextView"
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:text="@string/duration_format"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <!-- Artist and Album Name -->
    <LinearLayout
        android:id="@+id/artistAlbumLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_below="@id/titleDurationLayout"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/artistTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artist"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:layout_marginTop="8dp"/>

        <TextView
            android:id="@+id/dashTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="•"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"/>

        <TextView
            android:id="@+id/albumNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/album"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"/>
    </LinearLayout>

    <!-- Close button -->
    <Button
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/artistAlbumLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/close"
        android:textColor="@color/white" />

</RelativeLayout>
