<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".deezerAppJoel.DeezerMainActivity">

    <!-- Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/deezerMainToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="?attr/actionBarSize"
        app:title="@string/title_bar_dz"
        android:gravity="center_vertical"
        android:background="#7A00BCD4"
        app:titleTextColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar">
    </androidx.appcompat.widget.Toolbar>



    <!-- Search Input -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSearch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_corner_view"
        app:hintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deezerMainToolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_hint_dz"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="36dp"
            android:paddingEnd="16dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/searchIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@id/textInputLayoutSearch"
        app:layout_constraintStart_toStartOf="@id/textInputLayoutSearch"
        app:layout_constraintTop_toTopOf="@id/textInputLayoutSearch"
        app:layout_constraintVertical_bias="0.5" />

    <!-- Recent Searches Title -->
    <TextView
        android:id="@+id/textViewRecentSearches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_searches_dz"
        android:textFontWeight="@integer/material_motion_duration_medium_1"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSearch" />

    <!-- RecyclerView for Search Results -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewResults"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewRecentSearches"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
